abstracted MenuButton component, fixed global spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@
   --accent2: #d6d3d1;
 
   --page-margin-sides: calc(100vw / 12);
-  --page-margin-top-bottom: 6rem;
+  --page-margin-top-bottom: 12vw;
   background-color: var(--color);
   --font-size-base: 2vw;
   --font-size-2: calc(var(--font-size-base) * (20 / 15));
